--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,8 @@ $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
 
 $color-gray-dark: #777;
+$color-gray-darker: #999;
+$color-gray-really-dark: rgb(51, 51, 51);
 $color-white: #fff;
 $color-black: #000;
 
