--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 
 @import "layout/header";
 @import "layout/grid";
+@import "layout/footer";
 
 @import "components/button";
 @import "components/composition";
@@ -18,3 +19,4 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
+@import "components/form";
