feat: finished navigation popup

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,12 +8,12 @@ $color-secondary-dark: #ff7730;
 $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
-$color-gray-light-1: #f7f7f7;
-$color-gray-light-2: #eee;
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
 
-$color-gray-dark: #777;
-$color-gray-darker: #999;
-$color-gray-really-dark: rgb(51, 51, 51);
+$color-grey-dark: #777;
+$color-grey-darker: #999;
+$color-grey-really-dark: rgb(51, 51, 51);
 $color-white: #fff;
 $color-black: #000;
 
