--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,8 @@ body {
   border-radius: 50%;
   z-index: 110;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+  text-align: center;
+  cursor: pointer;
 }
 .navigation__background {
   height: 6rem;
@@ -260,6 +262,51 @@ body {
 .navigation__check-box:checked ~ .navigation__nav {
   opacity: 1;
   width: 100%;
+}
+.navigation__icon {
+  position: relative;
+  margin-top: 3.4rem;
+}
+.navigation__icon, .navigation__icon::before, .navigation__icon::after {
+  width: 3rem;
+  height: 2px;
+  background-color: #333333;
+  display: inline-block;
+}
+.navigation__icon::before, .navigation__icon::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  transition: all 0.2s;
+}
+.navigation__icon::before {
+  top: -0.8rem;
+}
+.navigation__icon::after {
+  top: 0.8rem;
+}
+.navigation__check-box:not(:checked) + .navigation__button:hover .navigation__icon::before {
+  top: -1.1rem;
+}
+.navigation__check-box:not(:checked) + .navigation__button:hover .navigation__icon::after {
+  top: 1.1rem;
+}
+.navigation__check-box:checked + .navigation__button:hover .navigation__icon::before {
+  transform: scale(1.3) rotate(135deg);
+}
+.navigation__check-box:checked + .navigation__button:hover .navigation__icon::after {
+  transform: scale(1.3) rotate(-135deg);
+}
+.navigation__check-box:checked + .navigation__button .navigation__icon {
+  background-color: transparent;
+}
+.navigation__check-box:checked + .navigation__button .navigation__icon::before {
+  margin-top: 1.1rem;
+  transform: rotate(135deg);
+}
+.navigation__check-box:checked + .navigation__button .navigation__icon::after {
+  margin-top: -0.6rem;
+  transform: rotate(-135deg);
 }
 
 .header {
