--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -30,7 +30,7 @@ body {
   font-weight: 400;
   /* font-size: 1rem; */
   line-height: 1.7;
-  color: $color-gray-dark;
+  color: $color-grey-dark;
   padding: 3rem;
 }
 
