--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
-  background-color: $color-gray-really-dark;
+  background-color: $color-grey-really-dark;
   padding: 10rem;
   font-size: 1.4rem;
-  color: $color-gray-light-1;
+  color: $color-grey-light-1;
 
   &__logo-box {
     text-align: center;
@@ -15,7 +15,7 @@
   }
 
   &__navigation {
-    border-top: 1px solid $color-gray-dark;
+    border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     display: inline-block;
   }
@@ -34,7 +34,7 @@
   &__link {
     &:link,
     &:visited {
-      background-color: $color-gray-really-dark;
+      background-color: $color-grey-really-dark;
       color: inherit;
       text-decoration: none;
       text-transform: uppercase;
@@ -51,7 +51,7 @@
   }
 
   &__copyright {
-    border-top: 1px solid $color-gray-dark;
+    border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     width: 95%;
     float: right;
