--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -13,6 +13,8 @@
     border-radius: 50%;
     z-index: 110;
     box-shadow: 0 1rem 3rem rgba($color-black, .2);
+    text-align: center;
+    cursor: pointer;
   }
 
   &__background {
@@ -89,6 +91,66 @@
   &__check-box:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+  }
+
+  &__icon {
+    position: relative;
+    margin-top: 3.4rem;
+
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-really-dark;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all .2s;
+    }
+
+    &::before {
+      top: -.8rem;
+    }
+
+    &::after {
+      top: .8rem;
+    }
+  }
+
+  &__check-box:not(:checked) + &__button:hover &__icon::before {
+    top: -1.1rem;
+  }
+
+  &__check-box:not(:checked) + &__button:hover &__icon::after {
+    top: 1.1rem;
+  }
+
+  &__check-box:checked + &__button:hover &__icon::before {
+    transform: scale(1.3) rotate(135deg);
+  }
+
+  &__check-box:checked + &__button:hover &__icon::after {
+    transform: scale(1.3) rotate(-135deg);
+  }
+
+  &__check-box:checked + &__button &__icon {
+    background-color: transparent;
+  }
+
+  &__check-box:checked + &__button &__icon::before {
+    margin-top: 1.1rem;
+    transform: rotate(135deg);
+  }
+
+  &__check-box:checked + &__button &__icon::after {
+    margin-top: -.6rem;
+    transform: rotate(-135deg);
   }
 
 }
