feat: added responsiveness and some useful commands for npm/yarn

--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -20,6 +20,10 @@
     display: block;
     transition: all .3s;
 
+    @include respond(tab-port) {
+      width: 100%;
+    }
+
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, .1);
@@ -44,6 +48,13 @@
     transition: all .3s;
   }
 
+  &__submit {
+    @include respond(tab-port) {
+      text-align: center;
+      margin-bottom: -4rem;
+    }
+  }
+
   // + -> sibling selector, catches the first element after the main selector, if the first element is not immediately after, use ~
 
   &__input:placeholder-shown + &__label {
@@ -55,6 +66,10 @@
   &__radio-group {
     width: 49%;
     display: inline-block;
+    @include respond(tab-port) {
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-label {
