--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,6 +14,10 @@
     animation-timing-function: ease-out;
     /* animation-iteration-count: 3; */
     /* animation-delay: 3s; */
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
@@ -22,6 +26,9 @@
     font-weight: 700;
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out;
+    @include respond(phone) {
+      letter-spacing: .5rem;
+    }
   }
 }
 
@@ -31,7 +38,6 @@ body {
   /* font-size: 1rem; */
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 
 .heading-secondary {
@@ -48,6 +54,15 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+     font-size: 2.5rem;
+  }
+
+  @include respond(phone) {
+     padding-top: 3rem;
+     font-size: 2rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
