--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -159,4 +159,56 @@
     font-size: 7rem;
     font-weight: 200;
   }
+
+  //@include respond(tab-port) {
+  @media only screen and (max-width: 56.25rem),
+         only screen and (hover: none) {
+    height: auto;
+    border-radius: 3px;
+    background-color: $color-white;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
+
+    &__side {
+      height: auto;
+      position: relative;
+      box-shadow: none;
+
+      &--back {
+        margin-top: -3rem;
+        transform: rotateY(0);
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+      }
+    }
+
+    &:hover &__side--front {
+      transform: rotateY(0);
+    }
+
+    &__picture {
+      height: 25rem;
+    }
+
+    &__details {
+      margin-top: -3rem;
+    }
+
+    //BACK SIDE STYLING
+    &__cta {
+      position: relative;
+      top: 0;
+      left: 0;
+      transform: translate(0);
+      margin-top: 2rem;
+      width: 100%;
+      padding: 4rem;
+    }
+
+    &__price-box {
+      margin-bottom: 0;
+    }
+
+    &__price-value {
+      font-size: 6rem;
+    }
+  }
 }
