--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -8,19 +8,39 @@
     transition: 0.2s all;
     outline-offset: 1rem;
 
+    @include respond(tab-port) {
+      float: left;
+      position: relative;
+      width: 33.333%;
+      box-shadow: 0 1.5rem 2rem rgba($color-black, 0.2);
+    }
+
     &--p1 {
       left: 0;
       top: -2rem;
+      @include respond(tab-port) {
+        top: 2rem;
+        transform: scale(1.15);
+      }
     }
 
     &--p2 {
       right: 0;
       top: 4rem;
+      @include respond(tab-port) {
+        top: -2rem;
+        transform: scale(1.3);
+        z-index: 99;
+      }
     }
 
     &--p3 {
       left: 20%;
       top: 11rem;
+      @include respond(tab-port) {
+        top: 1rem;
+        left: 0;
+      }
     }
 
     &:hover {
