--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -10,20 +10,50 @@
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
+  @include respond(tab-port) {
+    width: 100%;
+    transform: skewX(-6deg);
+    padding: 4rem;
+    padding-left: 6rem;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+  }
+
   & > * {
     transform: skewX(12deg);
+    @include respond(tab-port) {
+      transform: skewX(6deg);
+    }
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
 
   &__shape {
     width: 15rem;
     height: 15rem;
     float: left;
-    -webkit-shape-outside: circle(50% at 50% 50%);
-    shape-outside: circle(50% at 50% 50%);
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
+    border-radius: 50%;
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+    overflow: hidden;
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      -webkit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+      border-radius: none;
+    }
+
+    @include respond(tab-port) {
+      transform: translateX(-1rem) skewX(6deg);
+    }
+    @include respond(phone) {
+      transform: translateX(-2rem) skewX(0);
+    }
   }
 
   &__img {
@@ -34,6 +64,12 @@
 
   &__text {
     transform: skewX(12deg);
+    @include respond(tab-port) {
+      transform: skewX(6deg);
+    }
+    @include respond(phone) {
+      transform: skewX(0);
+    }
   }
 
   &__caption {
