--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -14,11 +18,14 @@
     url(../img/nat-4.jpg);
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% -20%, 100% 75vh, 0 100%);
   transform: skewY(-6.5deg);
   margin-top: -10rem;
   & > * {
     transform: skewY(6.5deg);
+  }
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
   }
 }
 
@@ -26,16 +33,25 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -15rem;
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
   padding: 15rem 0;
   position: relative;
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .book {
@@ -43,10 +59,23 @@
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
-  height: 50rem;
+
+  @include respond(tab-land) {
+    background-image: linear-gradient(105deg, rgba($color-white, .9) 70%, transparent 70%), url(../img/nat-10.jpg);
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(105deg, rgba($color-white, .9) 70%, rgba($color-white, .9) 100%);
+  }
 
   &__form {
     width: 50%;
     padding: 6rem;
+    @include respond(tab-land) {
+       width: 70%;
+    }
+    @include respond(tab-port) {
+       width: 100%;
+    }
   }
 }
